--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "apexcharts": "^4.7.0",
     "gsap": "^3.12.5",
     "next": "15.4.6",
-    "react": "19.1.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
     "react-countup": "^6.5.3",
-    "react-dom": "19.1.0",
+    "react-dom": "^18.3.1",
     "react-modal-video": "^2.0.2",
     "react-player": "^3.3.1",
     "react-slick": "^0.31.0",
@@ -27,8 +27,8 @@
   "devDependencies": {
     "@faker-js/faker": "^9.8.0",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/react-modal-video": "^1.2.3",
     "@types/react-slick": "^0.23.13",
     "@types/swiper": "^5.4.3",
