--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@headlessui/react": "^2.2.7",
     "apexcharts": "^4.7.0",
     "gsap": "^3.12.5",
-    "next": "15.4.6",
+    "next": "^15.1.6",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
     "react-countup": "^6.5.3",
@@ -33,6 +33,7 @@
     "@types/react-slick": "^0.23.13",
     "@types/swiper": "^5.4.3",
     "bootstrap": "^5.3.7",
+    "eslint": "^9.39.2",
     "typescript": "^5"
   }
 }
